--- a/templates/game/bunker_page.html
+++ b/templates/game/bunker_page.html
@@ -18,12 +18,15 @@
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <p class="mb-1">Катастрофа: {{ game.info.catastrophe }}</p>
+                    <p class="mb-1">Час до катастрофи: {{ game.info.timeout }} тижня(-ів)</p>
                     <p class="mb-1">Сезон: {{ game.info.season }}</p>
+                    <p class="mb-1">Сезонна подія: {{ game.info.season_type }}</p>
                     <p class="mb-1">Локація: {{ game.info.location }}</p>
-                    <p class="mb-1">Розмір бункеру: {{ game.info.room_size }}</p>
+                    <p class="mb-1">Кімнати: {{ game.info.rooms }}</p>
                     <p class="mb-1">Кількість місць: {{ game.info.places }}</p>
-                    <p class="mb-1">Час перебування: {{ game.info.time}}</p>
-                    <p class="mb-1">Провізії на: {{ game.info.food }}</p>
+                    <p class="mb-1">Час перебування: {{ game.info.time}} місяця(-ів)</p>
+                    <p class="mb-1">Провізії на: {{ game.info.food }} місяця(-ів)</p>
+                    <p class="mb-1">Навички: {{ game.info.skill_data }}</p>
                   </div>
                 </div>
               </div>
@@ -39,21 +42,21 @@
                         <input type="checkbox" class="form-check-input" id="sex" name="sex" checked disabled>
                         <label class="mb-1" for="sex"> Стать: {{ player.sex }}</label><br>
                         <input type="checkbox" class="form-check-input" id="age" name="age" {% if player.age.status == 'opened' %} checked disabled{% endif %}>
-                        <label for="age" class="mb-1"> Вік: {{ player.age.value }}</label><br>
+                        <label for="age" class="mb-1"> Вік: {{ player.age }}</label><br>
                         <input type="checkbox" class="form-check-input" id="sick" name="sick" {% if player.sick.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="sick" class="mb-1"> Хвороба: {{ player.sick.value }}</label><br>
+                        <label for="sick" class="mb-1"> Хвороба: {{ player.sick.name }} (Складність: {{ player.sick.difficulty }} Провізія: {{ player.hobby.provision }} місяця(-ів))</label><br>
                         <input type="checkbox" class="form-check-input" id="hobby" name="hobby" {% if player.hobby.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="hobby" class="mb-1">Хобі: {{ player.hobby.value }}</label><br>
+                        <label for="hobby" class="mb-1">Хобі: {{ player.hobby.name }} (Бонуси: {{ player.hobby.bonus }})</label><br>
                         <input type="checkbox" class="form-check-input" id="phobia" name="phobia" {% if player.phobia.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="phobia" class="mb-1">Фобія: {{ player.phobia.value }}</label><br>
+                        <label for="phobia" class="mb-1">Фобія: {{ player.phobia.name }} (Провізія: {{ player.hobby.provision }} місяця(-ів))</label><br>
                         <input type="checkbox" class="form-check-input" id="baggage" name="baggage" {% if player.baggage.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="baggage" class="mb-1">Багаж: {{ player.baggage.value }}</label><br>
+                        <label for="baggage" class="mb-1">Багаж: {{ player.baggage.name }} (Бонуси: {{ player.baggage.bonus }} Провізія: {{ player.baggage.provision }} місяця(-ів))</label><br>
                         <input type="checkbox" class="form-check-input" id="quality" name="quality" {% if player.quality.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="quality" class="mb-1">Риса: {{ player.quality.value }}</label><br>
+                        <label for="quality" class="mb-1">Риса: {{ player.quality.name }} (Провізія: {{ player.quality.provision }} місяця(-ів))</label><br>
                         <input type="checkbox" class="form-check-input" id="knowledge" name="knowledge" {% if player.knowledge.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="knowledge" class="mb-1">Знання: {{ player.knowledge.value }}</label><br>
+                        <label for="knowledge" class="mb-1">Знання: {{ player.knowledge.name }} (Бонуси: {{ player.knowledge.bonus }} Провізія: {{ player.knowledge.provision }} місяця(-ів))</label><br>
                         <input type="checkbox" class="form-check-input" id="job" name="job" {% if player.job.status == 'opened' %} checked disabled {% endif %}>
-                        <label for="job" class="mb-1">Робота: {{ player.job.value }}</label><br>
+                        <label for="job" class="mb-1">Робота: {{ player.job.name }} (Бонуси: {{ player.job.bonus }})</label><br>
                         {% if game.turn == player.profile.number %}
                         <button type="submit" class="btn btn-success">Відкрити</button>
                         {% endif %}
@@ -74,28 +77,28 @@
                 <div id="ch{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                       {% if profile.player_info.age.status == 'opened' %}
-                          <p class="mb-1"> Вік: {{ profile.player_info.age.value }}</p>
+                          <p class="mb-1"> Вік: {{ profile.player_info.age }}</p>
                       {% endif %}
                       {% if profile.player_info.sick.status == 'opened' %}
-                          <p class="mb-1"> Хвороба: {{ profile.player_info.sick.value }}</p>
+                          <p class="mb-1"> Хвороба: {{ profile.player_info.sick.name }} (Складність: {{ profile.player_info.sick.difficulty }} Провізія: {{ profile.player_info.hobby.provision }} місяця(-ів))</p>
                       {% endif %}
                       {% if profile.player_info.hobby.status == 'opened' %}
-                          <p class="mb-1"> Хобі: {{ profile.player_info.hobby.value }}</p>
+                          <p class="mb-1"> Хобі: {{ profile.player_info.hobby.name }} (Бонуси: {{ profile.player_info.hobby.bonus }})</p>
                       {% endif %}
                       {% if profile.player_info.phobia.status == 'opened' %}
-                          <p class="mb-1"> Фобія: {{ profile.player_info.phobia.value }}</p>
+                          <p class="mb-1">Фобія: {{ profile.player_info.phobia.name }} (Провізія: {{ profile.player_info.hobby.provision }} місяця(-ів))</p>
                       {% endif %}
                       {% if profile.player_info.baggage.status == 'opened' %}
-                          <p class="mb-1"> Багаж: {{ profile.player_info.baggage.value }}</p>
+                          <p class="mb-1">Багаж: {{ profile.player_info.baggage.name }} (Бонуси: {{ profile.player_info.baggage.bonus }} Провізія: {{ profile.player_info.baggage.provision }} місяця(-ів))</p>
                       {% endif %}
                       {% if profile.player_info.quality.status == 'opened' %}
-                          <p class="mb-1"> Риса: {{ profile.player_info.quality.value }}</p>
+                          <p class="mb-1">Риса: {{ profile.player_info.quality.name }} (Провізія: {{ profile.player_info.quality.provision }} місяця(-ів))</p>
                       {% endif %}
                       {% if profile.player_info.knowledge.status == 'opened' %}
-                          <p class="mb-1"> Знання: {{ profile.player_info.knowledge.value }}</p>
+                          <p class="mb-1">Знання: {{ profile.player_info.knowledge.name }} (Бонуси: {{ profile.player_info.knowledge.bonus }} Провізія: {{ profile.player_info.knowledge.provision }} місяця(-ів))</p>
                       {% endif %}
                       {% if profile.player_info.job.status == 'opened' %}
-                          <p class="mb-1"> Робота: {{ profile.player_info.job.value }}</p>
+                          <p class="mb-1">Робота: {{ profile.player_info.job.name }} (Бонуси: {{ profile.player_info.job.bonus }})</p>
                       {% endif %}
                   </div>
                 </div>
